--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.3.0",
+    "@iconify/vue": "^5.0.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "apexcharts": "^4.6.0",
-    "firebase": "^11.6.0",
+    "firebase": "^11.7.1",
     "firebase-admin": "^13.3.0",
     "moment": "^2.30.1",
-    "nuxt": "^3.16.2",
-    "overlayscrollbars": "^2.11.1",
+    "nuxt": "^3.17.2",
+    "overlayscrollbars": "^2.11.2",
     "overlayscrollbars-vue": "^0.5.9",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -27,9 +27,9 @@
     "vue-router": "^4.5.0",
     "vue3-apexcharts": "^1.8.0",
     "vue3-toastify": "^0.2.8",
-    "zod": "^3.24.3"
+    "zod": "^3.24.4"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "latest"
+    "@rollup/rollup-linux-x64-gnu": "^4.40.2"
   }
 }
